# Project3

Boost_Echo_Client/Boost_Echo_Client/: CMakeLists.txt  makefile
Boost_Echo_Client/Boost_Echo_Client/include/: SocketReader.h  connectionHandler.h  inputReader.h
Boost_Echo_Client/Boost_Echo_Client/src/: BGRSClient.cpp  BGRsclient.cpp  SocketReader.cpp  connectionHandler.cpp  inputReader.cpp
spl-net/: courses.txt
spl-net/spl-net/spl-net/: BGRSclient  Courses.txt
spl-net/spl-net/spl-net/src/main/: Courses.txt
spl-net/spl-net/spl-net/src/main/java/Messages/: ACKMessage.java  AdminReg.java  CourseReg.java  CourseStat.java  Error.java  IsRegistered.java  KdamCheck.java  Login.java  Logout.java  Message.java  MyCourses.java  StudentReg.java  StudentStat.java  UnRegister.java
spl-net/spl-net/spl-net/src/main/java/bgu/spl/net/srv/: ActorThreadPool.java  BaseServer.java  BlockingConnectionHandler.java  (+1 more)
spl-net/spl-net/spl-net/src/main/java/resources/: Admin.java  Course.java  Database.java  Student.java  User.java
spl-net/spl-net/src/main/java/Messages/: ACKMessage.java  AdminReg.java  CourseReg.java  CourseStat.java  Error.java  IsRegistered.java  KdamCheck.java  Login.java  Logout.java  Message.java  MyCourses.java  StudentReg.java  StudentStat.java  UnRegister.java
spl-net/spl-net/src/main/java/bgrs/: BgrsProtocol.java  MessageEncoderDecoder.java
spl-net/spl-net/src/main/java/bgu/spl/net/srv/: NonBlockingConnectionHandler.java  Reactor.java
spl-net/spl-net/src/main/java/resources/: Course.java  Database.java  Student.java  User.java
(+14 files in other folders)
